--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   },
   "homepage": "https://github.com/codyhowarth/codyhowarth.github.io#readme",
   "dependencies": {
-    "bootstrap": "^4.0.0",
-    "jquery": "^3.3.1",
+    "bootstrap": "^4.6.1",
+    "jquery": "^3.6.0",
     "popper.js": "^1.14.4"
   },
   "devDependencies": {
-    "browser-sync": "^2.24.4",
-    "gulp": "^3.9.1",
-    "gulp-sass": "^4.0.0",
+    "browser-sync": "^2.27.7",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^5.0.0",
+    "sass": "^1.43.4",
     "sitemap-generator-cli": "^7.2.0"
   }
 }
